--- a/dog.html
+++ b/dog.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <h1> Dog</h1>
+    <img src="img/dog.jpg" alt=" A photo of a dog."
     <p>Dog  is a domesticated descendant of the wolf which is characterized by an upturning tail. The dog is derived from an ancient, extinct wolf, and the modern wolf is the dog's nearest living relative. The dog was the first species to be domesticated, by hunter–gatherers over 15,000 years ago, before the development of agriculture.
 
         Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids. Over the millennia, dogs became uniquely adapted to human behavior, and the human-canine bond has been a topic of frequent study.
         
         The dog has been selectively bred over millennia for various behaviors, sensory capabilities, and physical attributes. Dog breeds vary widely in shape, size, and color. They perform many roles for humans, such as hunting, herding, pulling loads, protection, assisting police and the military, companionship, therapy, and aiding disabled people. This influence on human society has given them the sobriquet of "man's best friend".</p>
         <h2> Domestication</h2>
+        <img src="img/domest.jpg"
         <p>The earliest remains generally accepted to be those of a domesticated dog were discovered in Bonn-Oberkassel, Germany. Contextual, isotopic, genetic, and morphological evidence shows that this dog was not a local wolf. The dog was dated to 14,223 years ago and was found buried along with a man and a woman, all three having been sprayed with red hematite powder and buried under large, thick basalt blocks. The dog had died of canine distemper. Earlier remains dating back to 30,000 years ago have been described as Paleolithic dogs but their status as dogs or wolves remains debated because considerable morphological diversity existed among wolves during the Late Pleistocene.
 
             This timing indicates that the dog was the first species to be domesticated in the time of hunter–gatherers, which predates agriculture. DNA sequences show that all ancient and modern dogs share a common ancestry and descended from an ancient, extinct wolf population which was distinct from the modern wolf lineage. Most dogs form a sister group to the remains of a Late Pleistocene wolf found in the Kessleroch cave near Thayngen in the canton of Schaffhausen, Switzerland, which dates to 14,500 years ago. The most recent common ancestor of both is estimated to be from 32,100 years ago. This indicates that an extinct Late Pleistocene wolf may have been the ancestor of the dog, with the modern wolf being the dog's nearest living relative.
@@ -22,12 +24,19 @@
             <h2>Breeds</h2>
             <p>Dogs are the most variable mammal on earth with around 450 globally recognized dog breeds. In the Victorian era, directed human selection developed the modern dog breeds, which resulted in a vast range of phenotypes. Most breeds were derived from small numbers of founders within the last 200 years, and since then dogs have undergone rapid phenotypic change and were formed into today's modern breeds due to artificial selection imposed by humans. The skull, body, and limb proportions vary significantly between breeds, with dogs displaying more phenotypic diversity than can be found within the entire order of carnivores. These breeds possess distinct traits related to morphology, which include body size, skull shape, tail phenotype, fur type and colour. Their behavioural traits include guarding, herding, and hunting, retrieving, and scent detection. Their personality traits include hypersocial behavior, boldness, and aggression,[10] which demonstrates the functional and behavioral diversity of dogs. As a result, today dogs are the most abundant carnivore species and are dispersed around the world. The most striking example of this dispersal is that of the numerous modern breeds of European lineage during the Victorian era. list of some breeds are listed below:
                 <ul>
+                    <img src="img/german.jpg"
                     <li> German shepherd</li>
+                    <img src="img/bull dog.jpg"
                 <li> Bull dog</li>
+                <img src="img/rot.jpg"
             <li> Rottweiler</li>
+           <img src="img/dog 2.jpg" 
         <li> Doberman</li>
+        <img src="img/husky.jpg"
     <li> siberian Husky</li>
+    <img src="img/lab.jpg"
 <li> Labrado Retriever e.t.c</li>
+
 </ul>
  </p>
 </body>
