--- a/dog.html
+++ b/dog.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all"
+    
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta charset="UTF-8">
