add bg-info to my-pet

--- a/dog.html
+++ b/dog.html
@@ -17,6 +17,12 @@
     <div class="jumbotron">
 
     <p> Dog  is a domesticated descendant of the wolf which is characterized by an upturning tail. The dog is derived from an ancient, extinct wolf, and the modern wolf is the dog's nearest living relative. The dog was the first species to be domesticated, by hunter–gatherers over 15,000 years ago, before the development of agriculture. <br></div>
+
+       
+<div class="blockquote">
+    <p>"No go misbehave oo"</p>
+    <footer class="blockquote-footer">DOG</footer>
+</div> 
         
 
        Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids. Over the millennia, dogs became uniquely adapted to human behavior, and the human-canine bond has been a topic of frequent study.<br>
@@ -36,17 +42,20 @@
 
                 <ul class="important">
                     <img src="img/german.jpg" alt="german shepherd">
-                    <li> German shepherd</li>
+                    <li class="bg-info"> German shepherd</li>
                     <img src="img/bull dog.jpg" alt="bull dog">
-                <li> Bull dog</li>
+                <li class="bg-dark" > Bull dog</li>
                 <img src="img/rot.jpg" alt="rottweiler">
-            <li> Rottweiler</li>
+            <li class="bg-success" > Rottweiler</li>
            <img src="img/dog 2.jpg" alt="doberman">
-        <li> Doberman</li>
+        <li class="bg-danger" > Doberman</li>
         <img src="img/husky.jpg" alt="siberian husky">
-    <li> siberian Husky</li>
+    <li class="bg-warning"> siberian Husky</li>
     <img src="img/lab.jpg" alt="labrado retriever">
-<li> Labrado Retriever e.t.c</li>
+<li class="bg-primary"> Labrado Retriever e.t.c</li>
+
+
+
 
 </ul>
 <p>If you have any question while i am out of town, I <strong class="important">wont have cell service</strong>, but you can <a href="mailto:oluwafemi.OG@gmail.com"strong class="important">email me</a> if you need anything. </p>
