add important-note to my-pet

--- a/dog.html
+++ b/dog.html
@@ -63,7 +63,7 @@
 
 
 </ul>
-<p>If you have any question while i am out of town, I <strong class="important">wont have cell service</strong>, but you can <a href="mailto:oluwafemi.OG@gmail.com"strong class="important">email me</a> if you need anything. </p>
+<p>If you have any question while i am out of town, I <strong class="important-note">wont have cell service</strong>, but you can <a href="mailto:oluwafemi.OG@gmail.com" <class="important">email me</a> if you need anything. </p>
 
 
 <p>Thanks again!</p>
